--- a/ovo/index.html
+++ b/ovo/index.html
@@ -4,30 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OvO Unblocked | Hardcore Skill Game</title>
-    <meta name="description" content="Master movement in OvO Unblocked. This hardcore platformer is all about speed, agility, and precision. Run, jump, slide, and dive-kick your way through brutal levels.">
+    <meta name="description" content="Play OvO Unblocked online for free at FAF Games. Master challenging platformer levels with jumps, wall-jumps, slides, and dives. Accessible via Unblocked Games and Github.io.">
     <meta name="keywords" content="ovo, ovo unblocked, platformer game, skill game, action game, difficult game, free online game">
-    <link rel="canonical" href="https://onlyszgames.github.io/ovo" />
+    <link rel="canonical" href="https://fafgamess.github.io/ovo" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="OvO Unblocked ✦ Hardcore Skill Game" />
-    <meta property="og:description" content="Master movement in OvO Unblocked. This hardcore platformer is all about speed, agility, and precision. Run, jump, slide, and dive-kick your way through brutal levels." />
-    <meta property="og:url" content="https://onlyszgames.github.io/ovo" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/ovo.png" />
+    <meta property="og:description" content="Play OvO Unblocked online for free at FAF Games. Master challenging platformer levels with jumps, wall-jumps, slides, and dives. Accessible via Unblocked Games and Github.io." />
+    <meta property="og:url" content="https://fafgamess.github.io/ovo" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/ovo.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@SZGames">
+    <meta name="twitter:site" content="@FAFGames">
     <meta name="twitter:title" content="OvO Unblocked ✦ Hardcore Skill Game">
-    <meta name="twitter:description" content="Master movement in OvO Unblocked. This hardcore platformer is all about speed, agility, and precision. Run, jump, slide, and dive-kick your way through brutal levels.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/ovo.png">
+    <meta name="twitter:description" content="Play OvO Unblocked online for free at FAF Games. Master challenging platformer levels with jumps, wall-jumps, slides, and dives. Accessible via Unblocked Games and Github.io.">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/ovo.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "OvO The Ultimate Platformer Challenge",
-        "url": "https://onlyszgames.github.io/ovo",
-        "description": "Master movement in OvO Unblocked. This hardcore platformer is all about speed, agility, and precision. Run, jump, slide, and dive-kick your way through brutal levels.",
+        "url": "https://fafgamess.github.io/ovo",
+        "description": "Play OvO Unblocked online for free at FAF Games. Master challenging platformer levels with jumps, wall-jumps, slides, and dives. Accessible via Unblocked Games and Github.io.",
         "genre": "Platformer",
         "applicationCategory": "Game",
         "operatingSystem": "Web Browser",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/ovo.png"
+        "image": "https://fafgamess.github.io/img/ovo.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -434,7 +434,7 @@ justify-content: center;}
 
         <div class="game-header" style="background-color: #3949AB;">
             <h1>OvO The Ultimate Platformer Challenge</h1>
-            <p>Prepare for a true test of platforming skill in OvO Unblocked. This is not a simple jump-and-run game. OvO is a fast-paced, complex movement-based platformer where you must chain together jumps, wall-jumps, slides, and dives to navigate incredibly difficult levels. It is all about precision, speed, and mastering your character's abilities.</p>
+            <p>Test your platforming skills in OvO Unblocked, a fast-paced and challenging movement-based platformer. This game isn’t just a simple jump-and-run it requires precision, speed, and mastery of jumps, wall-jumps, slides, and dives to conquer its brutal levels. Whether you’re aiming for speedruns or high-score mastery, OvO delivers a rewarding challenge.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="ovo">
@@ -451,7 +451,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/ovo.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/ovo.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play OvO The Ultimate Platformer Challenge</div>
@@ -464,9 +464,9 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/ovo.png" alt="OvO The Ultimate Platformer Challenge
+            <img src="https://fafgamess.github.io/img/ovo.png" alt="OvO The Ultimate Platformer Challenge
 Gameplay" class="game-description-image" title="OvO The Ultimate Platformer Challenge">
-            <h2>About OvO 🤸</h2><p>OvO is a minimalist platformer that focuses entirely on complex movement mechanics. Your goal is simple: get your stick-figure character to the flag at the end of each level. The levels, however, are brutal obstacle courses filled with spikes and traps that require a deep understanding of your moveset. This OvO Unblocked game is famous in the speedrunning community for its high-skill ceiling. It is challenging, frustrating, and immensely rewarding.</p><h2>Game Features OvO 🏁</h2><p>The heart of OvO Unblocked is its deep and fluid moveset. You can run, jump, wall-jump, slide (to go under low ceilings), and perform a 'dive' or 'ground pound' that can be used to break certain blocks or get a small boost. Chaining these moves together is the key to success. The game features dozens of levels that progressively introduce new mechanics and harder challenges. The clean, minimalist art style keeps your focus purely on the gameplay and level design.</p><h3>Advanced Moves</h3><ul><li><b>Jump + Dive:</b> Gives you extra horizontal distance.</li><li><b>Wall-Slide + Jump:</b> The classic wall-jump.</li><li><b>Slide + Jump:</b> A long-jump to clear wide gaps.</li><li><b>Ground Pound:</b> Break fragile floors or kill enemies.</li></ul><h2>How to Play OvO 🎮</h2><p>Use the Arrow Keys to play. Left and Right move your character. Up jumps. The Down key, when pressed on the ground, makes you slide. Pressing Down in mid-air makes you perform a fast 'dive' or ground pound. You can jump off walls by pressing the 'Up' key when you are sliding down one. Combine these moves to navigate the levels. Your goal is to touch the flag. If you hit spikes, you restart the level or from the last checkpoint.</p>
+            <h2>About OvO 🤸</h2><p>OvO Games focus on complex movement mechanics. Your goal is to guide your stick-figure character to the flag at the end of each level. Levels are packed with spikes, traps, and obstacles that demand skillful chaining of moves. This OvO Unblocked version brings the high-skill gameplay directly to your browser, making it accessible anywhere on FAF Games, Unblocked Games, or Github.io.</p><h2>Game Features OvO 🏁</h2><p>The heart of OvO Unblocked is its deep and fluid moveset. You can run, jump, wall-jump, slide (to go under low ceilings), and perform a 'dive' or 'ground pound' that can be used to break certain blocks or get a small boost. Chaining these moves together is the key to success. The game features dozens of levels that progressively introduce new mechanics and harder challenges. The clean, minimalist art style keeps your focus purely on the gameplay and level design.</p><h3>Advanced Moves Tips</h3><ul><li><b>Jump + Dive:</b> Gain extra horizontal distance..</li><li><b>Wall-Slide + Jump:</b> The classic wall-jump.</li><li><b>Slide + Jump:</b> A long-jump to clear wide gaps.</li><li><b>Ground Pound:</b> Break fragile floors or defeat enemies.</li></ul><h2>How to Play OvO 🎮</h2><p>Playing OvO Unblocked is all about mastering precise movements using the Arrow Keys. Move left or right to navigate, press Up to jump, and use Down to slide on the ground or perform a dive/ground pound in mid-air. Press Up while sliding on a wall to execute wall-jumps. Combine these moves strategically to reach the flag while avoiding spikes and other hazards. If you fail, restart from the last checkpoint. Enjoy the full challenge of OvO Unblocked anytime on FAF Games, Unblocked Games, or Github.io, with instant play and no downloads required.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -522,7 +522,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/pixel-gun-survival" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/pixel-gun-survival.png" alt="Pixel Gun Survival">
+                                <img src="https://fafgamess.github.io/img/pixel-gun-survival.png" alt="Pixel Gun Survival">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Pixel Gun Survival</h3>
@@ -533,7 +533,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/parking-fury-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/parking-fury-2.png" alt="Parking Fury 2 More 2D Parking">
+                                <img src="https://fafgamess.github.io/img/parking-fury-2.png" alt="Parking Fury 2 More 2D Parking">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Parking Fury 2 More 2D Parking</h3>
@@ -544,7 +544,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/aqua-thrills" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/aqua-thrills.png" alt="Aqua Thrills Ultimate Jet Ski Challenge">
+                                <img src="https://fafgamess.github.io/img/aqua-thrills.png" alt="Aqua Thrills Ultimate Jet Ski Challenge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Aqua Thrills Ultimate Jet Ski Challenge</h3>
@@ -555,7 +555,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/stickman-crazy-box" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-crazy-box.png" alt="Stickman Crazy Box The Ultimate Chaos Arena">
+                                <img src="https://fafgamess.github.io/img/stickman-crazy-box.png" alt="Stickman Crazy Box The Ultimate Chaos Arena">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Crazy Box The Ultimate Chaos Arena</h3>
@@ -566,7 +566,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/stick-merge" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stick-merge.png" alt="Stick Merge">
+                                <img src="https://fafgamess.github.io/img/stick-merge.png" alt="Stick Merge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stick Merge</h3>
@@ -577,7 +577,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/bullet-force" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bullet-force.png" alt="Bullet Force The Ultimate Online FPS">
+                                <img src="https://fafgamess.github.io/img/bullet-force.png" alt="Bullet Force The Ultimate Online FPS">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bullet Force The Ultimate Online FPS</h3>
@@ -588,7 +588,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/bunny-hop" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bunny-hop.png" alt="Bunny Hop A Fast-Paced Platformer">
+                                <img src="https://fafgamess.github.io/img/bunny-hop.png" alt="Bunny Hop A Fast-Paced Platformer">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bunny Hop A Fast-Paced Platformer</h3>
@@ -599,7 +599,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/sharkio" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/sharkio.png" alt="Sharkio">
+                                <img src="https://fafgamess.github.io/img/sharkio.png" alt="Sharkio">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Sharkio</h3>
@@ -610,7 +610,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/g-switch-4" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/g-switch-4.png" alt="G-Switch 4 Gravity Flipping">
+                                <img src="https://fafgamess.github.io/img/g-switch-4.png" alt="G-Switch 4 Gravity Flipping">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">G-Switch 4 Gravity Flipping</h3>
@@ -621,7 +621,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/crossy-road" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/crossy-road.png" alt="Crossy Road Endless Hopper Game">
+                                <img src="https://fafgamess.github.io/img/crossy-road.png" alt="Crossy Road Endless Hopper Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Crossy Road Endless Hopper Game</h3>
@@ -632,7 +632,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/1v1-lol" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/1v1-lol.png" alt="1v1 Lol">
+                                <img src="https://fafgamess.github.io/img/1v1-lol.png" alt="1v1 Lol">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">1v1 Lol</h3>
@@ -643,7 +643,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
                     <div class="game-card">
                         <a href="/stickman-warriors" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/stickman-warriors.png" alt="Stickman Warriors 2 Player Combat">
+                                <img src="https://fafgamess.github.io/img/stickman-warriors.png" alt="Stickman Warriors 2 Player Combat">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Stickman Warriors 2 Player Combat</h3>
@@ -700,8 +700,8 @@ class="category-tag-item" style="background-color: #FF3D00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Discover the best games on FAF Games! Play all your favorites unblocked, anytime and anywhere at school, work, or home. Just click and start playing instantly, no downloads or installations needed.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -713,7 +713,7 @@ class="category-tag-item" style="background-color: #FF3D00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
