--- a/stick-merge/index.html
+++ b/stick-merge/index.html
@@ -6,27 +6,27 @@
     <title>Stick Merge Unblocked - PLay Online For Free</title>
     <meta name="description" content="Stick Merge Unblocked is an addictive merge-and-shoot game. Combine pistols to create better weapons. Equip your stickman and send him into battle to earn cash.">
     <meta name="keywords" content="stick merge, stick merge unblocked, merge game, idle game, clicker game, shooter, strategy game">
-    <link rel="canonical" href="https://onlyszgames.github.io/stick-merge" />
+    <link rel="canonical" href="https://fafgamess.github.io/stick-merge" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
+    <meta name="author" content="FAF Games">
     <meta property="og:title" content="Stick Merge Unblocked ~» Merge, Shoot, Win!" />
     <meta property="og:description" content="Stick Merge Unblocked is an addictive merge-and-shoot game. Combine pistols to create better weapons. Equip your stickman and send him into battle to earn cash." />
-    <meta property="og:url" content="https://onlyszgames.github.io/stick-merge" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/stick-merge.png" />
+    <meta property="og:url" content="https://fafgamess.github.io/stick-merge" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/stick-merge.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@SZGames">
     <meta name="twitter:title" content="Stick Merge Unblocked ~» Merge, Shoot, Win!">
     <meta name="twitter:description" content="Stick Merge Unblocked is an addictive merge-and-shoot game. Combine pistols to create better weapons. Equip your stickman and send him into battle to earn cash.">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/stick-merge.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/stick-merge.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Stick Merge",
-        "url": "https://onlyszgames.github.io/stick-merge",
+        "url": "https://fafgamess.github.io/stick-merge",
         "description": "Stick Merge Unblocked is an addictive merge-and-shoot game. Combine pistols to create better weapons. Equip your stickman and send him into battle to earn cash.",
         "genre": "Strategy",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/stick-merge.png"
+        "image": "https://fafgamess.github.io/img/stick-merge.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -435,7 +435,7 @@ justify-content: center;}
 
         <div class="game-header" style="background-color: #F4511E;">
             <h1>Stick Merge</h1>
-            <p>Create the ultimate weapon in Stick Merge Unblocked! This is a unique game where you merge guns to craft more powerful ones. Drag and drop identical pistols to evolve them into SMGs, shotguns, and beyond. Equip your stickman hero and watch him battle!</p>
+            <p>Stick Merge Unblocked challenges you to become the ultimate weapon crafter. Combine matching guns to create stronger and more advanced firearms. Each merge brings you closer to building a powerful arsenal that your stickman hero uses to defeat enemies automatically. Play Stick Merge on FAF Games or Github.io completely free, no installation or registration required.</p>
         </div>
 
         <div class="star-rating-container" data-game-id="stick-merge">
@@ -452,7 +452,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/stick-merge.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/stick-merge.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Stick Merge</div>
@@ -465,9 +465,9 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/stick-merge.png" alt="Stick Merge
+            <img src="https://fafgamess.github.io/img/stick-merge.png" alt="Stick Merge
 Gameplay" class="game-description-image" title="Stick Merge">
-            <h2>🤝 About Stick Merge</h2><p>Stick Merge is a highly addictive game that combines 'merge' mechanics with idle-shooter gameplay. You are presented with a grid where you can buy pistols. Your goal is to drag and drop two identical guns onto each other to 'merge' them into a single, more powerful weapon. You then equip these upgraded weapons onto your stickman hero, who automatically runs into a shooting range to battle other stickmen. This earns you money, which you use to buy more pistols. Stick Merge Unblocked is a satisfying loop of merging, upgrading, and watching your power grow.</p><h2>✨ Game Features Stick Merge</h2><p>The core of Stick Merge is its deep merging tree. Two pistols make a better pistol, two of those make an SMG, two SMGs make a shotgun, and so on, leading to powerful sniper rifles, miniguns, and even sci-fi weapons. You have a 'gun rack' to equip your stickman with your best creations. The 'battle' part is idle, meaning your stickman fights automatically, earning you cash even when you are just focusing on merging. Stick Merge Unblocked is the perfect game to play passively while focusing on the strategic puzzle of merging efficiently.</p><h3>Merging Strategy</h3><ul><li>Keep Merging: Always be combining guns. An empty slot is wasted potential.</li><li>Buy Low: Keep buying the cheapest pistols to fuel your merge chains.</li><li>Patience: It takes a lot of basic pistols to make one high-level gun.</li><li>Manage Your Board: Keep your grid organized so you can see potential matches.</li></ul><h2>🕹️ How to Play Stick Merge</h2><p>Playing Stick Merge is simple. Click the 'Buy Pistol' button to spend cash and place a new pistol on the merge grid. Click and drag a pistol onto another identical pistol to merge them into a higher-tier gun. You can see your stickman's gun slots at the top. Drag your best guns from the grid into these slots to equip them. Your stickman will then automatically go into battle. As he defeats enemies, you earn money. Use this money to buy more pistols, and repeat the cycle. The goal in Stick Merge Unblocked is to discover all the powerful weapons and defeat the toughest enemies.</p>
+            <h2>🤝 About Stick Merge</h2><p>Stick Merge is an exciting blend of merging and idle shooter gameplay. You start with simple pistols that can be merged into stronger weapons like SMGs, shotguns, sniper rifles, and even futuristic blasters. Every merge increases your hero’s combat power as he battles enemies to earn coins automatically. Use these coins to purchase more pistols and keep evolving your weapons. It’s a fun, strategic loop of merging, upgrading, and managing resources perfect for fans of Unblocked Games.</p><h2>✨ Game Features Stick Merge</h2><p>The Stick Merge Unblocked experience stands out with its creative merging mechanics and addictive progression. The game’s merging system lets you combine identical guns to craft advanced and more powerful weapons, creating an endless sense of improvement. While your stickman automatically fights enemies in idle battles, you can focus on strategy buying, merging, and organizing your arsenal. With an upgradable weapon system, you’ll unlock dozens of unique gun combinations, from basic pistols to futuristic blasters. The rewarding gameplay loop keeps you engaged as you earn coins, purchase new pistols, and continually evolve your firepower. Best of all, Stick Merge Unblocked is easily accessible through FAF Games or Github.io, so you can enjoy it anytime without downloads or installation.</p><h3>Merging Strategy</h3><ul><li>Always Merge: Keep combining similar guns to unlock stronger types.</li><li>Buy Smart: Purchase lower tier pistols frequently to maintain merge flow.</li><li>Organize the Grid: Arrange guns neatly to spot merge opportunities easily.</li><li>Be Patient: Big weapons require many smaller merges planned ahead.</li></ul><h2>🕹️ How to Play Stick Merge</h2><p>Playing Stick Merge Unblocked is simple, relaxing, and highly rewarding. Start by clicking the “Buy Pistol” button to place new weapons on your merge grid. Then, drag and drop identical guns to merge them into stronger, more advanced versions. Once you’ve crafted powerful weapons, equip your best guns onto your stickman hero to boost his attack power. Your hero will automatically battle enemies, earning coins as you progress. Use these earnings to purchase more pistols and continue merging, gradually unlocking deadlier weapons. The ultimate goal in Stick Merge Unblocked is to create every high-level gun and completely dominate the shooting range.</p>
             <div class="game-features">
                 <h3>Categories</h3>
                 <div class="game-category-tags">
@@ -528,7 +528,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/blumgi-rocket" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/blumgi-rocket.png" alt="Blumgi Rocket">
+                                <img src="https://fafgamess.github.io/img/blumgi-rocket.png" alt="Blumgi Rocket">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Blumgi Rocket</h3>
@@ -539,7 +539,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/merge-round-racers" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/merge-round-racers.png" alt="Merge Round Racers Idle Racing">
+                                <img src="https://fafgamess.github.io/img/merge-round-racers.png" alt="Merge Round Racers Idle Racing">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Merge Round Racers Idle Racing</h3>
@@ -550,7 +550,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/two-ball-3d-dark" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/two-ball-3d-dark.png" alt="Two Ball 3D Dark">
+                                <img src="https://fafgamess.github.io/img/two-ball-3d-dark.png" alt="Two Ball 3D Dark">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Two Ball 3D Dark</h3>
@@ -561,7 +561,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/hide-and-smash" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/hide-and-smash.png" alt="Hide and Smash A Competitive Hiding Game">
+                                <img src="https://fafgamess.github.io/img/hide-and-smash.png" alt="Hide and Smash A Competitive Hiding Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Hide and Smash A Competitive Hiding Game</h3>
@@ -572,7 +572,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/boxrob-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/boxrob-2.png" alt="Boxrob 2 The Cargo Robot Returns">
+                                <img src="https://fafgamess.github.io/img/boxrob-2.png" alt="Boxrob 2 The Cargo Robot Returns">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Boxrob 2 The Cargo Robot Returns</h3>
@@ -583,7 +583,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/wrassling" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/wrassling.png" alt="Wrassling The Ultimate Ragdoll Wrestling Game">
+                                <img src="https://fafgamess.github.io/img/wrassling.png" alt="Wrassling The Ultimate Ragdoll Wrestling Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Wrassling The Ultimate Ragdoll Wrestling Game</h3>
@@ -594,7 +594,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/eggbot-vs-zombies" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/eggbot-vs-zombies.png" alt="Eggbot Vs Zombies A Scrambled Showdown">
+                                <img src="https://fafgamess.github.io/img/eggbot-vs-zombies.png" alt="Eggbot Vs Zombies A Scrambled Showdown">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Eggbot Vs Zombies A Scrambled Showdown</h3>
@@ -605,7 +605,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/duck-life-battle" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/duck-life-battle.png" alt="Duck Life Battle (Demo)">
+                                <img src="https://fafgamess.github.io/img/duck-life-battle.png" alt="Duck Life Battle (Demo)">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Duck Life Battle (Demo)</h3>
@@ -616,7 +616,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/snake-is-mlg-edition" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/snake-is-mlg-edition.png" alt="Snake Is Mlg Edition A Wacky Parody Game">
+                                <img src="https://fafgamess.github.io/img/snake-is-mlg-edition.png" alt="Snake Is Mlg Edition A Wacky Parody Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Snake Is Mlg Edition A Wacky Parody Game</h3>
@@ -627,7 +627,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/vectaria-io" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/vectaria-io.png" alt="Vectaria io Multiplayer Adventure">
+                                <img src="https://fafgamess.github.io/img/vectaria-io.png" alt="Vectaria io Multiplayer Adventure">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Vectaria io Multiplayer Adventure</h3>
@@ -638,7 +638,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/village-craft" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/village-craft.png" alt="Village Craft A Sandbox Building Simulation">
+                                <img src="https://fafgamess.github.io/img/village-craft.png" alt="Village Craft A Sandbox Building Simulation">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Village Craft A Sandbox Building Simulation</h3>
@@ -649,7 +649,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
                     <div class="game-card">
                         <a href="/war-of-caribbean-pirates" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/war-of-caribbean-pirates.png" alt="War Of Caribbean Pirates A Naval Strategy Epic">
+                                <img src="https://fafgamess.github.io/img/war-of-caribbean-pirates.png" alt="War Of Caribbean Pirates A Naval Strategy Epic">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">War Of Caribbean Pirates A Naval Strategy Epic</h3>
@@ -706,8 +706,8 @@ class="category-tag-item" style="background-color: #FFAB00;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for the best FAF Games to play? Enjoy a huge collection of fun and exciting unblocked games that you can play anytime even at school or work. Just click, play instantly, and have fun with no downloads or sign-ups required!</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -719,7 +719,7 @@ class="category-tag-item" style="background-color: #FFAB00;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
