--- a/basket-champs/index.html
+++ b/basket-champs/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basket Champs Unblocked | 2-Player Shootout</title>
+    <title>Basket Champs Unblocked | Unblocked Games on GitHub.io</title>
     <meta name="description" content="Basket Champs: Win the tournament in this Unblocked 2-player game! A turn-based, 'drag-and-shoot' basketball skill game. Lead your nation to victory!">
     <meta name="keywords" content="Basket Champs, Basket Champs unblocked, sports game, skill game, 2-player game, basketball game, free online game">
-    <link rel="canonical" href="https://onlyszgames.github.io/basket-champs" />
+    <link rel="canonical" href="https://fafgamess.github.io/basket-champs" />
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Only Sz Games">
-    <meta property="og:title" content="Basket Champs Unblocked » A 2-Player Shootout" />
+    <meta name="author" content="FAF Games">
+    <meta property="og:title" content="Basket Champs Unblocked | Unblocked Games on GitHub.io<" />
     <meta property="og:description" content="Basket Champs: Win the tournament in this Unblocked 2-player game! A turn-based, 'drag-and-shoot' basketball skill game. Lead your nation to victory!" />
-    <meta property="og:url" content="https://onlyszgames.github.io/basket-champs" />
-    <meta property="og:image" content="https://onlyszgames.github.io/img/basket-champs.png" />
+    <meta property="og:url" content="https://fafgamess.github.io/basket-champs" />
+    <meta property="og:image" content="https://fafgamess.github.io/img/basket-champs.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Only Sz Games" />
+    <meta property="og:site_name" content="FAF Games" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@SZGames">
-    <meta name="twitter:title" content="Basket Champs Unblocked » A 2-Player Shootout">
+    <meta name="twitter:site" content="@FAFGames">
+    <meta name="twitter:title" content="Basket Champs Unblocked | Unblocked Games on GitHub.io<">
     <meta name="twitter:description" content="Basket Champs: Win the tournament in this Unblocked 2-player game! A turn-based, 'drag-and-shoot' basketball skill game. Lead your nation to victory!">
-    <meta name="twitter:image" content="https://onlyszgames.github.io/img/basket-champs.png">
+    <meta name="twitter:image" content="https://fafgamess.github.io/img/basket-champs.png">
     <link rel="icon" type="image/png" href="favicon.png">
     <script type="application/ld+json">
   {
         "@context": "https://schema.org",
         "@type": "Game",
         "name": "Basket Champs The Ultimate Free-Throw Tourney",
-        "url": "https://onlyszgames.github.io/basket-champs",
+        "url": "https://fafgamess.github.io/basket-champs",
         "description": "Basket Champs: Win the tournament in this Unblocked 2-player game! A turn-based, 'drag-and-shoot' basketball skill game. Lead your nation to victory!",
         "genre": "Sports",
         "applicationCategory": "Game",
@@ -43,7 +43,7 @@
             "bestRating": "5",
             "worstRating": "1"
         },
-        "image": "https://onlyszgames.github.io/img/basket-champs.png"
+        "image": "https://fafgamess.github.io/img/basket-champs.png"
    }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans&display=swap" rel="stylesheet">
@@ -392,7 +392,7 @@ justify-content: center;}
     <header>
        <div class="container header-content">
             <a href="/" class="logo">
-                Only Sz Games
+                FAF Games
             </a>
             <nav class="main-nav">
                 <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
@@ -454,7 +454,7 @@ justify-content: center;}
 
         <div class="game-container">
             <div class="game-frame-container" id="gameFrameContainer">
-                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://onlyszgames.github.io/img/basket-champs.png');"></div>
+                <div class="game-image-bg" id="gameImageBg" style="background-image: url('https://fafgamess.github.io/img/basket-champs.png');"></div>
                 <div class="game-overlay" id="gameOverlay">
                   <button class="play-button" id="playButton">▶</button>
                     <div class="play-text">Play Basket Champs The Ultimate Free-Throw Tourney</div>
@@ -467,7 +467,7 @@ justify-content: center;}
         </div>
 
         <div class="game-description">
-            <img src="https://onlyszgames.github.io/img/basket-champs.png" alt="Basket Champs The Ultimate Free-Throw Tourney
+            <img src="https://fafgamess.github.io/img/basket-champs.png" alt="Basket Champs The Ultimate Free-Throw Tourney
 Gameplay" class="game-description-image" title="Basket Champs The Ultimate Free-Throw Tourney">
             <h2>About Basket Champs 😊</h2><p>Basket Champs is a fantastic and polished 'drag-and-shoot' sports game. You choose your national team and try to win the entire tournament. The controls are simple, but the 'physics' are realistic. You must 'learn' the perfect arc. The game is a 'duel'. You must be more consistent than your opponent. It is a perfect game to challenge a friend, or to test your own skills against the AI. It is simple, fun, and very addictive. </p><p>This <strong>Basket Champs unblocked</strong> version is a perfect, lightweight, competitive game. Can you win the cup?</p><h2>Game Features Basket Champs 🎮</h2><ul><li>Turn-based, 'drag-and-shoot' basketball.</li><li>Full 'Tournament' mode: play for your nation.</li><li>Play 1-player vs AI or 2-player vs a friend.</li><li>A pure, skill-based game of 'finding the range'.</li></ul><h2>How to Play Basket Champs 🕹️</h2><p>Use your mouse. Click and <em>hold</em> on your player. Drag your mouse <em>backward</em> to set the power, and 'up/down' to set the angle. A line will show your trajectory. <em>Release</em> to shoot. <h3>Shooting Tactics</h3><p>Make small adjustments. Your first shot is a 'test'. Do not expect to make it. See <em>where</em> it misses. Was it too short? Add a <em>tiny</em> bit more power. Was it too far left? Adjust your angle <em>slightly</em> to the right. The key to <strong>Basket Champs unblocked</strong> is consistency. The player who can 'find their shot' and <em>repeat</em> it, wins. Do not 'over-correct' your misses. Just make tiny, precise changes.</p>
             <div class="game-features">
@@ -520,7 +520,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/roly-poly-monsters" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/roly-poly-monsters.png" alt="Roly Poly Monsters Physics Puzzle">
+                                <img src="https://fafgamess.github.io/img/roly-poly-monsters.png" alt="Roly Poly Monsters Physics Puzzle">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Roly Poly Monsters Physics Puzzle</h3>
@@ -531,7 +531,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/just-park-it-12" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/just-park-it-12.png" alt="Just Park It 12 Pro Parking">
+                                <img src="https://fafgamess.github.io/img/just-park-it-12.png" alt="Just Park It 12 Pro Parking">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Just Park It 12 Pro Parking</h3>
@@ -542,7 +542,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/bubble-shooter" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/bubble-shooter.png" alt="Bubble Shooter">
+                                <img src="https://fafgamess.github.io/img/bubble-shooter.png" alt="Bubble Shooter">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Bubble Shooter</h3>
@@ -553,7 +553,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/duck-life-3-evolution" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/duck-life-3-evolution.png" alt="Duck Life 3 Evolution A Training Simulation">
+                                <img src="https://fafgamess.github.io/img/duck-life-3-evolution.png" alt="Duck Life 3 Evolution A Training Simulation">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Duck Life 3 Evolution A Training Simulation</h3>
@@ -564,7 +564,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/parking-fury-2" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/parking-fury-2.png" alt="Parking Fury 2 More 2D Parking">
+                                <img src="https://fafgamess.github.io/img/parking-fury-2.png" alt="Parking Fury 2 More 2D Parking">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Parking Fury 2 More 2D Parking</h3>
@@ -575,7 +575,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/tricks" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/tricks.png" alt="Tricks">
+                                <img src="https://fafgamess.github.io/img/tricks.png" alt="Tricks">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Tricks</h3>
@@ -586,7 +586,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/basket-swooshes" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/basket-swooshes.png" alt="Basket Swooshes A 2-Player Ball Game">
+                                <img src="https://fafgamess.github.io/img/basket-swooshes.png" alt="Basket Swooshes A 2-Player Ball Game">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Basket Swooshes A 2-Player Ball Game</h3>
@@ -597,7 +597,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/jetpack-joyride" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/jetpack-joyride.png" alt="Jetpack Joyride Classic Runner">
+                                <img src="https://fafgamess.github.io/img/jetpack-joyride.png" alt="Jetpack Joyride Classic Runner">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Jetpack Joyride Classic Runner</h3>
@@ -608,7 +608,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/parking-fury-3d-beach-city" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/parking-fury-3d-beach-city.png" alt="Parking Fury 3D Beach City Sun">
+                                <img src="https://fafgamess.github.io/img/parking-fury-3d-beach-city.png" alt="Parking Fury 3D Beach City Sun">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Parking Fury 3D Beach City Sun</h3>
@@ -619,7 +619,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/vex-7" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/vex-7.png" alt="Vex 7 The Tower Challenge">
+                                <img src="https://fafgamess.github.io/img/vex-7.png" alt="Vex 7 The Tower Challenge">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Vex 7 The Tower Challenge</h3>
@@ -630,7 +630,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/extreme-off-road-cars" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/extreme-off-road-cars.png" alt="Extreme Off Road Cars 4x4 Action">
+                                <img src="https://fafgamess.github.io/img/extreme-off-road-cars.png" alt="Extreme Off Road Cars 4x4 Action">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">Extreme Off Road Cars 4x4 Action</h3>
@@ -641,7 +641,7 @@ class="category-tag-item" style="background-color: #64DD17;">
                     <div class="game-card">
                         <a href="/4th-and-goal-2022" class="game-link">
          <div class="game-image">
-                                <img src="https://onlyszgames.github.io/img/4th-and-goal-2022.png" alt="4th and Goal 2022 Football Strategy">
+                                <img src="https://fafgamess.github.io/img/4th-and-goal-2022.png" alt="4th and Goal 2022 Football Strategy">
                             </div>
       <div class="game-info">
                                 <h3 class="game-title">4th and Goal 2022 Football Strategy</h3>
@@ -698,8 +698,8 @@ class="category-tag-item" style="background-color: #64DD17;">
         <div class="container">
    <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Only Sz Games</h3>
-                    <p>Looking for your favorite Only Sz Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly—no downloads required.</p>
+                    <h3>FAF Games</h3>
+                    <p>Looking for your favorite FAF Games? Play them all right here, completely unblocked, even at school or work. Just click and play instantly no downloads required.</p>
                     <div class="social-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -711,7 +711,7 @@ class="category-tag-item" style="background-color: #64DD17;">
 
             <div class="footer-bottom">
                 <p>&copy;
-<span id="currentYear"></span> Only Sz Games. All rights reserved.</p>
+<span id="currentYear"></span> FAF Games. All rights reserved.</p>
                 <div class="footer-links">
                     <a href="/privacy-policy">Privacy Policy</a>
                     <a href="/contact">Contact Us</a>
